--- a/cardapio.html
+++ b/cardapio.html
@@ -5,12 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cardapio</title>
 </head>
-<body>
-   <div>
-    <center>
-        <h2> Cardapio </h2>
-
-    </center>
-   </div> 
-</body>
+   <style> 
+     body{
+        background-color: rgb(212, 201, 186);
+      .Cardapio{
+     color: rgb(3, 27, 48);
+     text-align: center;
+     font-weight: bold;
+     font-size: 50px;
+     font-style: italic;
+      }
+     }
+   </style>
+   <body>
+    <div class="Cardapio">
+        Cardápio
+    </div>
+    <div>
+        <img src="" alt="Imagem 1" class="imagem1">
+    </div>
+     
+   </body> 
+  
+  
 </html>
