--- a/cardapio.html
+++ b/cardapio.html
@@ -16,16 +16,56 @@
      font-style: italic;
       }
      }
+      .pizzacalabresa{
+       width: 200px;
+       border-radius: 100%;
+       width: 12rem;
+       height: 12rem;
+       margin-right: 20px;
+       margin-left: 110px;
+      }
+      .pizzaqueijo{
+       width: 200px;
+       border-radius: 100%;
+       width: 12rem;
+       height: 12rem;
+       margin-right: 20px;
+      }
+      .pizzacatupiry{
+       width: 200px;
+       border-radius: 100%;
+       width: 12rem;
+       height: 12rem;
+       margin-right: 20px;
+      }
+      .pizzacogumelo{
+       width: 200px;
+       border-radius: 100%;
+       width: 12rem;
+       height: 12rem;
+       margin-right: 20px;
+      }
+      .pizzael{
+       width: 200px;
+       border-radius: 100%;
+       width: 12rem;
+       height: 12rem;
+       margin-right: 20px;
+      }
    </style>
    <body>
     <div class="Cardapio">
         Cardápio
     </div>
     <div>
-        <img src="" alt="Imagem 1" class="imagem1">
+        <img src="./img/pizza calabresa.jpg" alt="pizzacalabresa" class="pizzacalabresa">
+        <img src="./img/pizza 4.jpg" alt="pizzaqueijo" class="pizzaqueijo">
+        <img src="./img/pizza catupiry.jpg" alt="pizzacatupiry" class="pizzacatupiry">
+        <img src="./img/pizza cogumelo.jpg" alt="pizzacogumelo" class="pizzacogumelo">
+        <img src="./img/pizza el.jpg" alt="pizzael" class="pizzael">
     </div>
-     
-   </body> 
+
+    </body> 
   
   
 </html>
