--- a/index.html
+++ b/index.html
@@ -35,13 +35,19 @@
 </head>
 <body>
     <nav>
-        <img src="./" alt="2" width=350 height=200>
-        <a href="#">Home</a>
-        <a href="#">Cardápio</a>
-        <a href="#">Nossa História</a>
-        <a href="#">Localização</a>
-        <a href="#">Agendamentos</a>
+        <ul>
+            <a href="#">Home</a>
+            <a href="#">Cardápio</a>
+            <a href="#">Nossa História</a>
+            <a href="#">Localização</a>
+            <a href="#">Agendamentos</a>
+        </ul>
     </nav>
-    
+    <footer>
+        <img src="./img/El Tomato.png">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
+
+
 </body>
 </html>
