--- a/localizacao.html
+++ b/localizacao.html
@@ -5,15 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <style>
-    body{
-     min-height: 100%;
-     background-image: url('img/pizzacabecalho.jpg');
-     background-size: cover;
-     background-attachment: fixed;
+   
+   body{
+     background-color:#B69A7E
     }
+   
+   div{
+     width: 300px;
+     height: 150px;
+     border-width: 2px;
+     border-color: black;
+     border-style: solid;
+     display: inline-block;
+     border-radius: 100px;
+     padding: 40px;
+     
+   }
+
+   
+   
  </style>
 </head>
 <body>
-    
+      <div class="container">
+         <h2>Contatos:</h2>
+           <p>(41) 3256-2288</p>
+         <h2>Horário de funcionamento</h2>
+          <p>
+            <strong>Segunda á sexta:</strong>
+            18:00 às 00:00
+           <br>
+            <strong>Sábado:</strong>
+            16:00 às 00:00
+          </p>
+        </div>    
+      <h2>Localização:</h2>
 </body>
 </html>
