--- a/localizacao.html
+++ b/localizacao.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<style>
-   
-   body{
-     background-color:#B69A7E
-    }
-   
-   div{
-     width: 300px;
-     height: 150px;
-     border-width: 2px;
-     border-color: black;
-     border-style: solid;
-     display: inline-block;
-     border-radius: 100px;
-     padding: 40px;
-     
-   }
-
-   
-   
- </style>
+    <title>Pizzaria Delícia</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #f4f4f4;
+            padding: 10px;
+            text-align: center;
+        }
+        section {
+            padding: 20px;
+            text-align: center;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-      <div class="container">
-         <h2>Contatos:</h2>
-           <p>(41) 3256-2288</p>
-         <h2>Horário de funcionamento</h2>
-          <p>
-            <strong>Segunda á sexta:</strong>
-            18:00 às 00:00
-           <br>
-            <strong>Sábado:</strong>
-            16:00 às 00:00
-          </p>
-        </div>    
-      <h2>Localização:</h2>
+    <section id="horario">
+        <h2>Horário de Atendimento</h2>
+        <p>Segunda a Sexta: 18h às 23h</p>
+        <p>Sábado e Domingo: 12h às 23h</p>
+    </section>
+    <section id="localizacao">
+        <h2>Localização</h2>
+        <p>Rua das Pizzas, 123 - Centro</p>
+        <p>Cidade dos Sabores - SP</p>
+    </section>
+    <section id="contato">
+        <h2>Contato</h2>
+        <p>Telefone: (11) 1234-5678</p>
+        <p>Email: contato@pizzariaeltomatto.com</p>
+    </section>
 </body>
 </html>
