--- a/agendamentos.html
+++ b/agendamentos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agendamentos</title>
 <style>
 
 body{
@@ -99,7 +99,7 @@ legend {
             <input type="number" name="nmesas" id="nmesas">
           <br>
           <br>
-            <img src="img/mesas.jpg" alt="mesas" class="mesas">
+            <img src="./img/mesas.jpg" alt="mesas" class="mesas">
         </fieldset>
      <br>
      <br>
