--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <img src="./img/eltomato.png">
         <ul>
             <a href="./idex.html">Inicio</a>
-            <a href="#">Cardápio</a>
-            <a href="#">Nossa História</a>
-            <a href="#">Localização</a>
-            <a href="#">Agendamentos</a>
+            <a href="./cardapio.html">Cardápio</a>
+            <a href="./">Nossa História</a>
+            <a href="./localizacao.html">Localização</a>
+            <a href="./agendamentos.html">Agendamentos</a>
         </ul>
     </nav>
     <br>
