--- a/cardapio.html
+++ b/cardapio.html
@@ -1,59 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cardapio</title>
+    <style>
+
+        body {
+            background-color: rgb(212, 201, 186);
+
+            .Cardapio {
+                color: rgb(3, 27, 48);
+                text-align: center;
+                font-weight: bold;
+                font-size: 50px;
+                font-style: italic;
+            }
+        }
+
+        .pizzacalabresa {
+            width: 200px;
+            border-radius: 100%;
+            width: 12rem;
+            height: 12rem;
+            margin-right: 20px;
+            margin-left: 110px;
+        }
+
+        .pizzaqueijo {
+            width: 200px;
+            border-radius: 100%;
+            width: 12rem;
+            height: 12rem;
+            margin-right: 20px;
+        }
+
+        .pizzacatupiry {
+            width: 200px;
+            border-radius: 100%;
+            width: 12rem;
+            height: 12rem;
+            margin-right: 20px;
+        }
+
+        .pizzacogumelo {
+            width: 200px;
+            border-radius: 100%;
+            width: 12rem;
+            height: 12rem;
+            margin-right: 20px;
+        }
+
+        .pizzael {
+            width: 200px;
+            border-radius: 100%;
+            width: 12rem;
+            height: 12rem;
+            margin-right: 20px;
+        }
+    </style>
 </head>
-   <style> 
-     body{
-        background-color: rgb(212, 201, 186);
-      .Cardapio{
-     color: rgb(3, 27, 48);
-     text-align: center;
-     font-weight: bold;
-     font-size: 50px;
-     font-style: italic;
-      }
-     }
-      .pizzacalabresa{
-       width: 200px;
-       border-radius: 100%;
-       width: 12rem;
-       height: 12rem;
-       margin-right: 20px;
-       margin-left: 110px;
-      }
-      .pizzaqueijo{
-       width: 200px;
-       border-radius: 100%;
-       width: 12rem;
-       height: 12rem;
-       margin-right: 20px;
-      }
-      .pizzacatupiry{
-       width: 200px;
-       border-radius: 100%;
-       width: 12rem;
-       height: 12rem;
-       margin-right: 20px;
-      }
-      .pizzacogumelo{
-       width: 200px;
-       border-radius: 100%;
-       width: 12rem;
-       height: 12rem;
-       margin-right: 20px;
-      }
-      .pizzael{
-       width: 200px;
-       border-radius: 100%;
-       width: 12rem;
-       height: 12rem;
-       margin-right: 20px;
-      }
-   </style>
-   <body>
+
+<body>
+    <nav>
+
+        <img src="./img/eltomato.png">
+        <ul>
+            <a href="./idex.html">Inicio</a>
+            <a href="./cardapio.html">Cardápio</a>
+            <a href="./">Nossa História</a>
+            <a href="./localizacao.html">Localização</a>
+            <a href="./agendamentos.html">Agendamentos</a>
+        </ul>
+    </nav>
     <div class="Cardapio">
         Cardápio
     </div>
@@ -65,7 +85,7 @@
         <img src="./img/pizza el.jpg" alt="pizzael" class="pizzael">
     </div>
 
-    </body> 
-  
-  
+</body>
+
+
 </html>
