--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <img src="./img/eltomato.png">
         <ul>
-            <a href="./idex.html">Inicio</a>
+            <a href="./index.html">Inicio</a>
             <a href="./cardapio.html">Cardápio</a>
             <a href="./">Nossa História</a>
             <a href="./localizacao.html">Localização</a>
