--- a/agendamentos.html
+++ b/agendamentos.html
@@ -1,108 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendamentos</title>
-<style>
+    <link rel="stylesheet" href="inicio.css">
+    <style>
+        body {
+            background-image: url("img/fundo_tomato.png");
+            background-size: cover;
+            /* Para cobrir toda a área do corpo */
+            background-position: center;
+            /* Centraliza a imagem */
+        }
 
-body{
-    background-image: url("img/fundo_tomato.png");
-    background-size: cover; /* Para cobrir toda a área do corpo */
-    background-position: center; /* Centraliza a imagem */
-}
-    .reserva{
-        align-items: center;
-    }
-    /* Estilizando o formulário */
-form {
-    background-color:#a82621;
-    margin: 0 auto;
-    max-width: 500px;
-    padding: 20px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-}
+        .reserva {
+            align-items: center;
+        }
 
-form input {
-    background-color: #ffffff; /* Cor de fundo dos campos de entrada */
-    border: 1px solid #000000; /* Cor da borda dos campos de entrada */
-    border-radius: 5px; /* Borda arredondada nos campos de entrada */
-    padding: 8px; /* Espaçamento interno dos campos de entrada */
-}
-/* Estilizando os campos de entrada */
-.input-padrao {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-}
+        /* Estilizando o formulário */
+        form {
+            background-color: #a82621;
+            margin: 0 auto;
+            max-width: 500px;
+            padding: 20px;
+            border: 1px solid #000000;
+            border-radius: 5px;
+        }
 
-/* Estilizando o campo de texto para número da mesa */
-textarea {
-    resize:none; /* Impede redimensionamento do textarea */
-    color: white;
-    border-radius: 5px;
-}
+        form input {
+            background-color: #ffffff;
+            /* Cor de fundo dos campos de entrada */
+            border: 1px solid #000000;
+            /* Cor da borda dos campos de entrada */
+            border-radius: 5px;
+            /* Borda arredondada nos campos de entrada */
+            padding: 8px;
+            /* Espaçamento interno dos campos de entrada */
+        }
 
-/* Estilizando a legenda dos campos de seleção */
-legend {
-    font-weight: bold;
-    color: #ffffff;
-}
+        /* Estilizando os campos de entrada */
+        .input-padrao {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #000000;
+            border-radius: 5px;
+        }
 
-/* Estilizando o checkbox */
-.checkbox {
-    display: block;
-    margin-bottom: 10px;
-}
+        /* Estilizando o campo de texto para número da mesa */
+        textarea {
+            resize: none;
+            /* Impede redimensionamento do textarea */
+            color: white;
+            border-radius: 5px;
+        }
 
-/* Estilizando o botão de enviar */
-.enviar {
-    background-color: #E4302A;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
+        /* Estilizando a legenda dos campos de seleção */
+        legend {
+            font-weight: bold;
+            color: #ffffff;
+        }
 
-.enviar:hover {
-    background-color: #85110d;
-}
+        /* Estilizando o checkbox */
+        .checkbox {
+            display: block;
+            margin-bottom: 10px;
+        }
+
+        /* Estilizando o botão de enviar */
+        .enviar {
+            background-color: #E4302A;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .enviar:hover {
+            background-color: #85110d;
+        }
 
 
-.mesas{
-    width: 400px; /* define a largura da imagem como 200 pixels */
-    height: auto; /* mantém a proporção da imagem */
-}
-</style>
+        .mesas {
+            width: 400px;
+            /* define a largura da imagem como 200 pixels */
+            height: auto;
+            /* mantém a proporção da imagem */
+        }
+    </style>
 </head>
+
 <body>
-    <form >
-        <label color="white" for="nomesobrenome">Nome e Sobrenome</label> 
+    <nav>
+
+        <img src="./img/eltomato.png">
+        <ul>
+            <a href="./index.html">Inicio</a>
+            <a href="./cardapio.html">Cardápio</a>
+            <a href="./">Nossa História</a>
+            <a href="./localizacao.html">Localização</a>
+            <a href="./agendamentos.html">Agendamentos</a>
+        </ul>
+    </nav>
+    <br>
+    <br>
+    <form>
+        <label color="white" for="nomesobrenome">Nome e Sobrenome</label>
         <input type="text" id="nomesobrenome" class="input-padrao" required>
-     <br>
-     <br>
+        <br>
+        <br>
         <label color="white" for="email">Email</label>
         <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
-     <br>
-     <br>
+        <br>
+        <br>
         <label color="white" for="telefone">Telefone</label>
         <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
-     <br>
-     <br>
-       <fieldset>
+        <br>
+        <br>
+        <fieldset>
             <legend>Número da Mesa:</legend>
             <input type="number" name="nmesas" id="nmesas">
-          <br>
-          <br>
+            <br>
+            <br>
             <img src="./img/mesas.jpg" alt="mesas" class="mesas">
         </fieldset>
-     <br>
-     <br>
+        <br>
+        <br>
         <fieldset>
             <legend>Qual horário da sua reserva?</legend>
             <select>
@@ -111,23 +138,30 @@ legend {
                 <option>20:00</option>
             </select>
         </fieldset>
-     <br>
-     <br>   
+        <br>
+        <br>
         <fieldset>
             <legend>Qual o dia da sua reserva?</legend>
             <input type="date" name="data" id="data">
         </fieldset>
-     <br>
-     <br>
+        <br>
+        <br>
         <fieldset>
             <legend>Para quantas pessoas é a reserva?</legend>
             <input type="number" name="quantpessoas" id="quantpessoas">
         </fieldset>
 
         <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
-     <br>
-     <br>
+        <br>
+        <br>
         <input type="submit" value="Enviar formulário" class="enviar">
     </form>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <p class="copyright">&copy;Pizzaria El Tomato</p>
+    </footer>
 </body>
+
 </html>
