--- a/agendamentos.html
+++ b/agendamentos.html
@@ -101,7 +101,7 @@
         <ul>
             <a href="./index.html">Inicio</a>
             <a href="./cardapio.html">Cardápio</a>
-            <a href="./">Nossa História</a>
+            <a href="./historia.html">Nossa História</a>
             <a href="./localizacao.html">Localização</a>
             <a href="./agendamentos.html">Agendamentos</a>
         </ul>
@@ -162,6 +162,7 @@
     <footer>
         <p class="copyright">&copy;Pizzaria El Tomato</p>
     </footer>
+
 </body>
 
 </html>
