--- a/index.html
+++ b/index.html
@@ -9,29 +9,32 @@
 </head>
 
 <body>
+    <!--campo superior-->
     <nav>
-
         <img src="./img/eltomato.png">
         <ul>
             <a href="./index.html">Inicio</a>
             <a href="./cardapio.html">Cardápio</a>
-            <a href="./">Nossa História</a>
+            <a href="./historia.html">Nossa História</a>
             <a href="./localizacao.html">Localização</a>
             <a href="./agendamentos.html">Agendamentos</a>
         </ul>
     </nav>
+    <!-- Fim campo superior-->
     <br>
     <br>
     <br>
-    <div class="slider">
+    <div class="slider"> <!-- Todo o campo dos slides-->
 
-        <div class="slides">
+        <div class="slides"> <!-- Radio butons, bolinhas que passam o texto-->
             <input type="radio" name="radio-btn" id="radio1">
             <input type="radio" name="radio-btn" id="radio2">
             <input type="radio" name="radio-btn" id="radio3">
             <input type="radio" name="radio-btn" id="radio4">
+            <!-- Fim Radio butons-->
 
-            <div class="slide first">
+            <!-- Imagens-->
+            <div class="slide first"> 
                 <img src="./img/img1.jpeg" alt="Imagem 1">
             </div>
             <div class="slide">
@@ -43,28 +46,30 @@
             <div class="slide">
                 <img src="./img/img4.jpg" alt="Imagem 4">
             </div>
+            <!-- Fim Iamgens-->
 
+            <!-- Bolinhas de navegação-->
             <div class="navigation-auto">
                 <div class="auto-btn1"></div>
                 <div class="auto-btn2"></div>
                 <div class="auto-btn3"></div>
                 <div class="auto-btn4"></div>
             </div>
-
+            <!-- Fim Bolinhas de navegação-->
         </div>
-
+        <!-- Referenciando os botutons com as imgs-->
         <div class="manual-navigation">
             <label for="radio1" class="manual-btn"></label>
             <label for="radio2" class="manual-btn"></label>
             <label for="radio3" class="manual-btn"></label>
             <label for="radio4" class="manual-btn"></label>
         </div>
-
+        <!-- Fim Referenciando os botutons com as imgs-->
     </div>
     <br>
     <br>
     <br>
-    <footer>
+    <footer> <!-- Escrita no Rodapé-->
         <p class="copyright">&copy;Pizzaria El Tomato</p>
     </footer>
 
