--- a/localizacao.html
+++ b/localizacao.html
@@ -4,39 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzaria Delícia</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        nav {
-            background-color: #f4f4f4;
-            padding: 10px;
-            text-align: center;
-        }
-        section {
-            padding: 20px;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="loc.css">
+  
 </head>
 <body>
+    <nav>
+
+        <img src="./img/eltomato.png">
+        <ul>
+            <a href="./index.html">Inicio</a>
+            <a href="./cardapio.html">Cardápio</a>
+            <a href="./historia.html">Nossa História</a>
+            <a href="./localizacao.html">Localização</a>
+            <a href="./agendamentos.html">Agendamentos</a>
+        </ul>
+    </nav>
     <section id="horario">
         <h2>Horário de Atendimento</h2>
         <p>Segunda a Sexta: 18h às 23h</p>
@@ -52,5 +34,11 @@
         <p>Telefone: (11) 1234-5678</p>
         <p>Email: contato@pizzariaeltomatto.com</p>
     </section>
+    <br>
+    <br>
+    <br>
+    <footer> <!-- Escrita no Rodapé-->
+        <p class="copyright">&copy;Pizzaria El Tomato</p>
+    </footer>
 </body>
 </html>
