--- a/cardapio.html
+++ b/cardapio.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cardapio</title>
     <style>
-
         body {
             background-color: rgb(212, 201, 186);
+            font-family: Arial, sans-serif;
+            margin: 0;
+            color: #333;
 
             .Cardapio {
                 color: rgb(3, 27, 48);
@@ -18,6 +20,37 @@
                 font-style: italic;
             }
         }
+
+
+        nav {
+            background-color: #ac1212;
+            /*cor da barra de cima*/
+            display: flex;
+            align-items: center;
+        }
+
+        nav img {
+            padding: 10px;
+            height: 200px;
+        }
+
+
+        nav a {
+            /*caixa em cima do texto quando passa o cursor*/
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            transition: background-color 0.3s;
+        }
+
+        /* Fim caixa em cima do texto quando passa o cursor*/
+
+        nav a:hover {
+            background-color: #c24b4b;
+            /* cor caixa do texto quando passa o cursor*/
+        }
+
 
         .pizzacalabresa {
             width: 200px;
@@ -59,6 +92,21 @@
             height: 12rem;
             margin-right: 20px;
         }
+
+        footer {
+            /* Rodapé de baixo*/
+            text-align: center;
+            background: url(./img/bg2.jpg);
+            padding: 10px;
+        }
+
+
+        .copyright {
+            /* Cor do texto Rodapé de baixo*/
+            color: white;
+            font-size: 13px;
+            margin: 20px;
+        }
     </style>
 </head>
 
@@ -67,9 +115,9 @@
 
         <img src="./img/eltomato.png">
         <ul>
-            <a href="./idex.html">Inicio</a>
+            <a href="./index.html">Inicio</a>
             <a href="./cardapio.html">Cardápio</a>
-            <a href="./">Nossa História</a>
+            <a href="./historia.html">Nossa História</a>
             <a href="./localizacao.html">Localização</a>
             <a href="./agendamentos.html">Agendamentos</a>
         </ul>
@@ -84,6 +132,14 @@
         <img src="./img/pizza cogumelo.jpg" alt="pizzacogumelo" class="pizzacogumelo">
         <img src="./img/pizza el.jpg" alt="pizzael" class="pizzael">
     </div>
+    <br>
+    <img src="./img/imgcad.jpeg" alt="salgado">
+    <img src="./img/imgcad2.jpeg" alt="salgado">
+    <br>
+    <br>
+    <footer> <!-- Escrita no Rodapé-->
+        <p class="copyright">&copy;Pizzaria El Tomato</p>
+    </footer>
 
 </body>
 
